--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify js/main.js -o app.js -d",
-    "start": "node index.js",
+    "start": "devserver",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify js/main.js -o app.js -d -v",
     "serve": "devserver"
