--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "devserver",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify js/main.js -o app.js -d -v",
-    "serve": "devserver"
+    "serve": "devserver",
+    "lint": "eslint js/"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "watchify": "~2.0.0",
     "grunt": "~0.4.5",
-    "grunt-devserver": "~0.6.0"
+    "grunt-devserver": "~0.6.0",
+    "eslint": "~0.9.2"
   }
 }
