--- a/.eslintrc
+++ b/.eslintrc
@@ -5,15 +5,17 @@
     },
     "rules": {
         "eqeqeq": 2,
-        "curly": 1,
         "dot-notation": 0,
         "no-shadow": 1,
+        "curly": 0,
         
         "quotes": 0,
         "no-trailing-spaces": 0,
         "no-multi-spaces": 0,
         "eol-last": 1,
-        "space-infix-ops": 0
+        "space-infix-ops": 0,
+        "no-underscore-dangle": 0,
+        "key-spacing": 0
     },
     "globals": {
         "Promise": true,
