--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt": "~0.4.5",
     "grunt-devserver": "~0.6.0",
     "eslint": "~0.9.2",
-    "casperjs": "~1.1.0-beta3"
+    "casperjs": "~1.1.0-beta3",
+    "tree-kill": "0.0.6"
   }
 }
